--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -8356,6 +8356,9 @@ a {
   .nav-link.inactive-course.active {
     background-color: lightgray !important; }
 
+.invalid-feedback {
+  display: block !important; }
+
 .tableFixHead thead th {
   position: sticky;
   top: 0;
