--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -35,6 +35,8 @@ a
     &.active
         background-color: lightgray !important
 
+.invalid-feedback
+  display: block !important
 
 #alert-div
   //@extend .row
