--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -37,7 +37,9 @@
 
                             <div class="tab-pane" id="new-course-pane">
                                 <form class="form-horizontal" id="new-course-content"> {# actual content #}
+                                    {% if role < 2 %}
                                     <p class="text-center h4 mb-4">Add course</p>
+                                    {% endif %}
                                     <hr/>
 
                                     <div class="form-group row align-items-center">
@@ -111,13 +113,14 @@
                                                        autocomplete="off">
                                                 Via schema transfer
                                             </label>
+
                                         </div>
                                         <div class="invalid-feedback"></div>
 
                                     </div>
 
 
-                                    <div class="form-group row align-items-center mb-4">
+                                    <div class="form-group row align-items-center mb-4 d-none" id="new-schema-textarea-div">
                                         <label for="new-schema-textarea" class="col-12 col-md-4 col-form-label">Schema
                                             text</label>
                                         <div class="col-12 col-md-8">
@@ -128,7 +131,7 @@
                                     </div>
 
 
-                                    <div class="form-group row align-items-center mb-4">
+                                    <div class="form-group row align-items-center mb-4 d-none" id="new-schema-upload-div">
                                         <label for="new-schema-upload" class="col-12 col-md-4 col-form-label">Schema
                                             upload</label>
                                         <div class="col-12 col-md-8">
@@ -138,7 +141,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="form-group row align-items-center mb-4">
+                                    <div class="form-group row align-items-center mb-4 d-none" id="new-schema-transfer-div">
                                         <label for="new-schema-transfer" class="col-12 col-md-4 col-form-label">Schema
                                             transfer</label>
                                         <div class="col-12 col-md-8">
