--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -18,7 +18,9 @@
                     <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
                         <!-- Website title -->
                         <h2>Course list</h2>
-                        <a data-toggle="pill" href="#new-course-pane">Add course</a>
+                        {% if role < 2 %}
+                        <a data-toggle="pill" href="#new-course-pane" id="add-course-link">Add course</a>
+                        {% endif %}
 
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
@@ -37,9 +39,7 @@
 
                             <div class="tab-pane" id="new-course-pane">
                                 <form class="form-horizontal" id="new-course-content"> {# actual content #}
-                                    {% if role < 2 %}
                                     <p class="text-center h4 mb-4">Add course</p>
-                                    {% endif %}
                                     <hr/>
 
                                     <div class="form-group row align-items-center">
@@ -271,7 +271,7 @@
                             </div>
 
                         </div>
-                        <div id="alert-div"></div>
+                        <div id="alert-div" class="mt-3"></div>
 
                     </div>
                 </div>
