--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -38,7 +38,7 @@
                     Options
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
-                    {% if role == 0 or role == 1 %}
+                    {% if role == 0 %}
                     <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Get dump of all databases</a>
 
                     <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
