addcourselink now works properly

--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -19,7 +19,7 @@
                         <!-- Website title -->
                         <h2>Course list</h2>
                         {% if role < 2 %}
-                        <a data-toggle="pill" href="#new-course-pane" id="add-course-link">Add course</a>
+                        <a data-toggle="pill" href="#" id="add-course-link">Add course</a>
                         {% endif %}
 
                         <hr/>
