fixed teacher permissions; fixed home admin page not loading navbar; fixed "this course is inactive" msg

--- a/designapp1/templates/admin.html
+++ b/designapp1/templates/admin.html
@@ -4,6 +4,10 @@
     <title>Admin Home</title>
 {% endblock %}
 
+{% block scripts %}
+    <script defer src="/static/scripts/admin.js"></script>
+{% endblock %}
+
 {% block content %}
     <div class="vh-100 d-flex flex-column">
     {% include 'navbar.html' %}
