--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -13,15 +13,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav mr-auto">
-            {% if role == 0 or role == 1 %}
+            {% if role < 2 %}
                 <li class="nav-item" id="navbar-edit-courses">
                     <a class="nav-link" href="/edit_courses" >Edit courses</a>
                 </li>
-                {% if role == 0 %}
+            {% endif %}
+        <!-- TODO fix that TAs can see edit courses too -->
+            {% if role == 0 %}
                 <li class="nav-item" id="navbar-edit-users">
                     <a class="nav-link" href="/edit_users" >Edit users</a>
                 </li>
-                    {% endif %}
             {% endif %}
 
             <li class="nav-item" id="navbar-student-view">
