--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav mr-auto">
-            {% if role < 2 %}
+            {% if role < 2 or TA_count > 0 %}
                 <li class="nav-item" id="navbar-edit-courses">
                     <a class="nav-link" href="/edit_courses" >Edit courses</a>
                 </li>
