--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -168,7 +168,7 @@
 
                                     <hr>
                                     <button type="submit" class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
-                                            id="new-course-button">Add course
+                                            id="add-course-button">Add course
                                     </button>
                                 </form>
                             </div>
