edit course field populated

--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -176,7 +176,7 @@
 
                             <div class="tab-pane" id="existing-course-pane">
                                 <form class="form-horizontal" id="existing-course-content"> {# actual content #}
-                                    <p class="text-center h4 mb-4">Add course</p>
+                                    <p class="text-center h4 mb-4">Edit course</p>
                                     <hr/>
                                     <div class="form-group row align-items-center">
                                         <label for="course-id-field" class="col-12 col-md-4 col-form-label">Course
