generate migrations text is improved

--- a/designapp1/templates/navbar.html
+++ b/designapp1/templates/navbar.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
                     {% if role == 0 %}
-                    <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Get dump of all databases</a>
+                    <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Generate migrations</a>
 
                     <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
                     {% endif %}
