--- a/designapp1/templates/edit_courses.html
+++ b/designapp1/templates/edit_courses.html
@@ -334,19 +334,40 @@
                                     <hr>
                                     <h4>Databases for this course</h4>
                                     <div class="row">
-                                        <div class="col-6">
+                                        <div class="col-6 col-lg-5">
                                             <div class="overflow-auto border rounded" style="height: 300px;">
-                                                <div class="nav flex-column nav-pills" id="studentdatabases-nav" role="tablist">
-{#                                                    <div class="spinner-border text-info"></div>#}
+                                                <div class="nav flex-column nav-pills" id="studentdatabases-nav"
+                                                     role="tablist">
+                                                    {#                                                    <div class="spinner-border text-info"></div>#}
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-6 col-lg-7">
                                             <div class="tab-content" id="courses-db">
-{#                                                <div class="spinner-border text-info"></div>#}
+                                                {#                                                <div class="spinner-border text-info"></div>#}
                                             </div>
                                         </div>
                                     </div>
+                                    {% if role < 2 %}
+
+                                        <hr>
+                                        <h4>Add TAs</h4>
+                                        <div class="row">
+                                            <div class="col-6 col-lg-5">
+                                                <div class="overflow-auto border rounded" style="height: 300px;">
+                                                    <div class="nav flex-column nav-pills" id="TA-nav"
+                                                         role="tablist">
+                                                        {#                                                    <div class="spinner-border text-info"></div>#}
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-6 col-lg-7">
+                                                <div class="tab-content" id="TA-div">
+                                                    {#                                                <div class="spinner-border text-info"></div>#}
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
 
