fixed permissions on dbmusers GET hotfix to be more secure; sort of fixed table headers but not really; edit user page no longer has spinny load icons everywhere, and properly displays role when changed;

--- a/frontend/css/change_password.css
+++ b/frontend/css/change_password.css
@@ -8364,6 +8364,9 @@ a {
   top: 0;
   cursor: pointer; }
 
+.table th td {
+  border-top: 0px; }
+
 table {
   border-collapse: collapse;
   width: 100%; }
