--- a/designapp1/templates/edit_users.html
+++ b/designapp1/templates/edit_users.html
@@ -144,13 +144,14 @@
                         <div class="col-6">
                             <div class="overflow-auto border rounded" style="height: 300px;">
                                 <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
-                                    <div class="spinner-border text-info"></div>
+{#                                    <div class="spinner-border text-info"></div>#}
                                 </div>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="tab-content" id="courses-db">
-                                <div class="spinner-border text-info"></div>
+                                No database selected
+{#                                <div class="spinner-border text-info"></div>#}
                             </div>
                         </div>
                     </div>
