--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -15,18 +15,18 @@
         <ul class="navbar-nav mr-auto">
             {% if role < 2 or TA_count > 0 %}
                 <li class="nav-item" id="navbar-edit-courses">
-                    <a class="nav-link" href="/edit_courses" >Edit courses</a>
+                    <a class="nav-link" href="/edit_courses">Edit courses</a>
                 </li>
             {% endif %}
-        <!-- TODO fix that TAs can see edit courses too -->
+            <!-- TODO fix that TAs can see edit courses too -->
             {% if role == 0 %}
                 <li class="nav-item" id="navbar-edit-users">
-                    <a class="nav-link" href="/edit_users" >Edit users</a>
+                    <a class="nav-link" href="/edit_users">Edit users</a>
                 </li>
             {% endif %}
 
             <li class="nav-item" id="navbar-student-view">
-                <a class="nav-link" href="/student_view" >Student view</a>
+                <a class="nav-link" href="/student_view">Student view</a>
             </li>
 
             {#            <button class="btn btn-secondary mr-3" onclick="location.href='/edit_course'">Edit courses</button>#}
@@ -42,14 +42,16 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
                     {% if role == 0 %}
-                    <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Generate migrations</a>
+                        <a class="dropdown-item text-danger" id="navbar-dump-all-databases" href="#">Generate
+                            migrations</a>
 
-                    <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
+                        <div class="dropdown-divider" id="navbar-options-dropdown-divider"></div>
                     {% endif %}
 
                     <a class="dropdown-item" href="/change_password" id="navbar-change-password">Change password</a>
                     <form id="logout-form" action="/logout" method="POST">
-                        <a class="dropdown-item" href="#" id="navbar-logout" onclick="document.getElementById('logout-form').submit();">Log
+                        <a class="dropdown-item" href="#" id="navbar-logout"
+                           onclick="document.getElementById('logout-form').submit();">Log
                             out</a>
                     </form>
 
