--- a/src/templates/reset_password.html
+++ b/src/templates/reset_password.html
@@ -23,21 +23,25 @@
                     <div class="form-group row align-items-center">
                         <label for="new-password-field" class="col-12 col-md-4 col-form-label">New password</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="new-password-field" required="">
+                            <input type="password" name="password" class="form-control" id="new-password-field"
+                                   required="">
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
                     <div class="form-group row align-items-center mb-4">
-                        <label for="confirm-password-field" class="col-12 col-md-4 col-form-label">Confirm new password</label>
+                        <label for="confirm-password-field" class="col-12 col-md-4 col-form-label">Confirm new
+                            password</label>
                         <div class="col-12 col-md-8">
-                            <input type="password" name="password" class="form-control" id="confirm-password-field" required="">
+                            <input type="password" name="password" class="form-control" id="confirm-password-field"
+                                   required="">
                             <div class="invalid-feedback"></div>
                         </div>
                     </div>
                     <p class="text-center small mb-2">Please use a password that has 8 characters or more, and contains
                         at least one lowercase letter, one uppercase letter, and one number</p>
                     <hr>
-                    <button type="submit"  class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3" id="new-password-button">Set new password
+                    <button type="submit" class="btn btn-info btn-block mt-5 mb-1 col-md-6 offset-md-3"
+                            id="new-password-button">Set new password
                     </button>
                     <div class="mt-5 align-items-center center-block " id="alert-div"></div>
                 </form>
