fixed chunk loading

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,6 +9,12 @@
     {% block stylesheets %}
         <link rel="stylesheet" href="/static/css/main.css">
     {% endblock %}
+        <script defer src="/static/scripts/0.chunk.js"></script>
+        <script defer src="/static/scripts/1.chunk.js"></script>
+        <script defer src="/static/scripts/2.chunk.js"></script>
+        <script defer src="/static/scripts/15.chunk.js"></script>
+
+
     {% block scripts %}
         <script defer src="/static/scripts/main.js"></script>
     {% endblock %}
