--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,12 +7,13 @@
         <title>Database Administration Bundle</title>
     {% endblock %}
     {% block stylesheets %}
+        <link rel="stylesheet" href="/static/css/15.css">
         <link rel="stylesheet" href="/static/css/main.css">
+
     {% endblock %}
-        <script defer src="/static/scripts/0.chunk.js"></script>
-        <script defer src="/static/scripts/1.chunk.js"></script>
-        <script defer src="/static/scripts/2.chunk.js"></script>
-        <script defer src="/static/scripts/15.chunk.js"></script>
+    <script defer src="/static/scripts/0.chunk.js"></script>
+    <script defer src="/static/scripts/1.chunk.js"></script>
+    <script defer src="/static/scripts/15.chunk.js"></script>
 
 
     {% block scripts %}
