navbar is now sticky-top

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark d-inline-flex  ">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark d-inline-flex  ">
     <span class="font-weight-bold text-white mr-3">
             Database Administration Bundle</span>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
