removed lots of todos

--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -319,7 +319,7 @@
                                         {% endif %}
                                         <div class="center-block col-12 col-md-4 my-2 my-md-4 d-flex">
                                             <button id="edit-course-button"
-                                                    class="btn btn-info reset-button btn-block">Edit course
+                                                    class="btn btn-info reset-button btn-block">Save changes
                                             </button>
                                         </div>
                                         {% if role < 2 %}
