fixed styling of edit user page

--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -32,13 +32,13 @@
                 <div class="col-12 col-md-8 mt-3 mt-md-0 d-flex">
                     <div class="center-block container border border-dark rounded-lg shadow-lg bg-white p-3  p-xl-5 text-center">
 
-                        <div class="tab-content" id="courses-content">
+                        <div class="tab-content" id="users-tabs">
 
 
                             <div class="tab-pane active m-5" id="please-select-a-course"><h1>Please select a course</h1>
                             </div>
 
-                            <div class="tab-pane" id="new-course-pane">
+                            <div class="tab-pane" id="users-pane">
                                 <form class="form-horizontal" id="new-course-content"> {# actual content #}
                                     <p class="text-center h4 mb-4">Add course</p>
                                     <hr/>
