--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -16,124 +16,178 @@
 
 {% block content %}
     <div class="vh-100 d-flex flex-column">
-    {% include 'navbar.html' %}
+        {% include 'navbar.html' %}
 
-    <div class="container-fluid py-3 py-lg-5 flex-grow-1 d-flex px-2 px-lg-5 ">
-        <div class="row center-block flex-row flex-grow-1">
-            <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
-                <div class=" center-block
+        <div class="container-fluid py-3 py-lg-5 flex-grow-1 d-flex px-2 px-lg-5 ">
+            <div class="row center-block flex-row flex-grow-1">
+                <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
+                    <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
 
 
-                    <div class="row d-flex flex-column">
-                        <div class="col-12"><h3>Users</h3></div>
-                        <div class="col-12">
-                            <hr>
-                        </div>
-                        <div class="col-12 d-flex flex-column flex-grow-1">
-                            <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
-                            <div class="overflow-auto tableFixHead" style="height: 300px;">
-                                <table id="user_table"
-                                       class="table table-sm table-hover table-fixed table-borderless table-striped">
-                                    <thead class="bg-dark text-light">
-                                    <tr>
-                                        <th class="th-sm" scope="col">#</th>
-                                        <th class="th-sm" scope="col">Role</th>
-                                        <th class="th-sm" scope="col">E-Mail</th>
-                                        <th class="th-sm" scope="col">Verified</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody id="users">
-                                    <tr class="spinner-border text-info"></tr>
-                                    </tbody>
-                                </table>
+                        <div class="row d-flex flex-column">
+                            <div class="col-12"><h3>Users</h3></div>
+                            <div class="col-12">
+                                <hr>
                             </div>
-                        </div>
+                            <div class="col-12 d-flex flex-column flex-grow-1">
+                                <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
+                                <div class="overflow-auto tableFixHead" style="height: 300px;">
+                                    <table id="user_table"
+                                           class="table table-sm table-hover table-fixed table-borderless table-striped">
+                                        <thead class="bg-dark text-light">
+                                        <tr>
+                                            <th class="th-sm" scope="col">#</th>
+                                            <th class="th-sm" scope="col">Role</th>
+                                            <th class="th-sm" scope="col">E-Mail</th>
+                                            <th class="th-sm" scope="col">Verified</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="users">
+                                        <tr class="spinner-border text-info"></tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
 
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
-                <div class=" center-block
+                <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
+                    <div class=" center-block
     container border border-dark rounded-lg shadow-lg bg-white p-3 py-xl-5 text-center">
 
-                    <div class="row">
-                        <div id="user-info"></div>
-                        <div class="col-8">
-                            <div class="form-group row">
-                                <label class="col-12 col-md-4 col-form-label">Username:</label>
-                                <div class="col-12 col-md-8" id="username"></div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-12 col-md-4 col-form-label">Role:</label>
-                                <div class="col-12 col-md-8" id="role"></div>
-                            </div>
-                        </div>
-                        <div class="col-4 text-right">
-                            <label>Verified: </label>
-                            <div class="d-inline" id="verified"></div>
-                            <div class="text-right">
-                                <button type="button" class="btn btn-info" data-toggle="modal"
-                                        data-target="#editUserRoleModal">
-                                    Edit Role
-                                </button>
-                                <button id="delete_button" type="button" class="btn btn-danger">
-                                    Delete User
-                                </button>
-                            </div>
-                            <!-- Edit User Role Modal -->
-                            <div class="modal fade" id="editUserRoleModal" tabindex="-1" role="dialog">
-                                <div class="modal-dialog modal-dialog-centered" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title">Edit Role</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span>&times;</span>
-                                            </button>
+                        <div class="tab-content" id="users-tabs">
+
+
+                            <div class="tab-pane active" id="please-select-a-user"><h1>Please select a user</h1></div>
+
+                            <div class="tab-pane" id="edit-user-pane">
+
+
+                                <div id="user-details-div">
+
+
+                                    <div class="form-group row">
+                                        <label class="col-12 col-md-4 col-form-label">Username:</label>
+                                        <div class="col-12 col-md-8"><input id="username" type="text"
+                                                                            class="form-control" value=""
+                                                                            readonly=""></div>
+                                    </div>
+                                    <div class="form-group row">
+                                        <label class="col-12 col-md-4 col-form-label">Role:</label>
+                                        <div class="col-12 col-md-8"><input id="role" type="text"
+                                                                            class="form-control" value=""
+                                                                            readonly=""></div>
+                                    </div>
+                                    <label>Verified: </label>
+                                    <div class="d-inline" id="verified"></div>
+                                    <button type="button" class="btn btn-info" data-toggle="modal"
+                                            data-target="#editUserRoleModal">
+                                        Edit Role
+                                    </button>
+                                    <button id="delete_button" type="button" class="btn btn-danger">
+                                        Delete User
+                                    </button>
+                                    {##}
+                                    {##}
+                                    {#                                        <div class="mt-5 form-group row">#}
+                                    {#                                            <label class="col-12 col-md-4 col-form-label">Username:</label>#}
+                                    {#                                            <div class="col-12 col-md-8">#}
+                                    {#                                                <input type="text" class="form-control"#}
+                                    {#                                                       value="dab_Pearls_of_Computer_Science_20" readonly="">#}
+                                    {#                                            </div>#}
+                                    {#                                        </div>#}
+                                    {#                                        <div class="form-group row">#}
+                                    {#                                            <label class="col-12 col-md-4 col-form-label">Password:</label>#}
+                                    {#                                            <div class="col-12 col-md-8">#}
+                                    {#                                                <input type="text" class="form-control" value="ZZmzkzuoC71rXTQf"#}
+                                    {#                                                       readonly="">#}
+                                    {#                                            </div>#}
+                                    {#                                        </div>#}
+                                    {#                                        <div class="align-items-center align-items-stretch row">#}
+                                    {#                                            <div class="center-block col-12 col-md-4 my-2 my-md-4 d-flex">#}
+                                    {#                                                <button id="delete-button-571"#}
+                                    {#                                                        class="btn btn-danger delete-button btn-block">Delete database#}
+                                    {#                                                    and release credentials#}
+                                    {#                                                </button>#}
+                                    {#                                            </div>#}
+                                    {#                                            <div class="center-block col-12 col-md-4 my-2 my-md-4 d-flex">#}
+                                    {#                                                <button id="reset-button-571"#}
+                                    {#                                                        class="btn btn-info reset-button btn-block">Reset database#}
+                                    {#                                                </button>#}
+                                    {#                                            </div>#}
+                                    {#                                            <div class="center-block col-12 col-md-4 my-2 my-md-4 d-flex">#}
+                                    {#                                                <button onclick="window.location.replace('/rest/dump/571/')"#}
+                                    {#                                                        id="dump-button-571"#}
+                                    {#                                                        class="btn btn-secondary dump-button btn-block">Get dump of#}
+                                    {#                                                    database#}
+                                    {#                                                </button>#}
+                                    {#                                            </div>#}
+                                    {#                                        </div>#}
+                                    {#                                        <hr>#}
+                                </div>
+
+
+                                <!-- Edit User Role Modal -->
+                                <div class="modal fade" id="editUserRoleModal" tabindex="-1" role="dialog">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title">Edit Role</h5>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                        aria-label="Close">
+                                                    <span>&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                Change user role to:
+                                                <select id="selected_role" class=custom-select">
+                                                    <option value="0" selected>Admin</option>
+                                                    <option value="1">Teacher</option>
+                                                    <option value="2">Student</option>
+                                                </select>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary"
+                                                        data-dismiss="modal">
+                                                    Decline
+                                                </button>
+                                                <button id="change_role" type="button" class="btn btn-primary">
+                                                    Confirm
+                                                </button>
+                                            </div>
                                         </div>
-                                        <div class="modal-body">
-                                            Change user role to:
-                                            <select id="selected_role" class=custom-select">
-                                                <option value="0" selected>Admin</option>
-                                                <option value="1">Teacher</option>
-                                                <option value="2">Student</option>
-                                            </select>
+                                    </div>
+                                </div>
+                                <hr/>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="overflow-auto border rounded" style="height: 300px;">
+                                            <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
+                                                {#                                    <div class="spinner-border text-info"></div>#}
+                                            </div>
                                         </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                                                Decline
-                                            </button>
-                                            <button id="change_role" type="button" class="btn btn-primary">Confirm
-                                            </button>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="tab-content" id="courses-db">
+                                            No database selected
+                                            {#                                <div class="spinner-border text-info"></div>#}
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <hr/>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="overflow-auto border rounded" style="height: 300px;">
-                                <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
-                                    {#                                    <div class="spinner-border text-info"></div>#}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="tab-content" id="courses-db">
-                                No database selected
-                                {#                                <div class="spinner-border text-info"></div>#}
-                            </div>
-                        </div>
-                    </div>
-                    <div id="alert-div"></div>
 
+                        </div>
+                    </div>
                 </div>
-
+                <div id="alert-div"></div>
 
             </div>
+
+
         </div>
+    </div>
     </div>
 
 
