--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -43,7 +43,7 @@
                                             <th class="th-sm" scope="col">Verified</th>
                                         </tr>
                                         </thead>
-                                        <tbody id="users">
+                                        <tbody id="users" class="nav-pills" role="tablist">
                                         <tr class="spinner-border text-info"></tr>
                                         </tbody>
                                     </table>
