table row styling

--- a/src/frontend/sass/main.sass
+++ b/src/frontend/sass/main.sass
@@ -53,6 +53,13 @@ table
   border-collapse: collapse
   width: 100%
 
+tr.active, tr:active
+    background-color: $info !important
+    color: white !important
+    & td
+      & a
+        color: white !important
+
 
 /* --------------------------------------------------------
 /* "Bootstrap V4 Simple Checkbox Switch - No Js"
