--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -69,6 +69,8 @@
 
 
                                     <div class="form-group row">
+                                        <div class="col-12 text-center h5">User details</div>
+                                        <hr class="col-12">
                                         <label class="col-12 col-md-4 col-form-label">Username:</label>
                                         <div class="col-12 col-md-8"><input id="username" type="text"
                                                                             class="form-control" value=""
