re-added spinners

--- a/src/templates/student_view.html
+++ b/src/templates/student_view.html
@@ -19,7 +19,10 @@
                         <h2>Course list</h2>
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
-                            <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+                            <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
+                                                                <div class="spinner-border text-info"></div>
+
+                            </div>
                         </div>
 
                     </div>
