--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -24,7 +24,10 @@
 
                         <hr/>
                         <div class="overflow-auto" style="height: 300px;">
-                            <div class="nav flex-column nav-pills" id="courses-nav" role="tablist"></div>
+                            <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
+                                <div class="spinner-border text-info"></div>
+
+                            </div>
                         </div>
 
                     </div>
