fixed /dab/ thing

--- a/src/templates/forgot_password_page.html
+++ b/src/templates/forgot_password_page.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-11 col-md-7 col-xl-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
-                <p class="text-left small mt-2 mb-0"><a href="/login">Back to login page</a></p>
+                <p class="text-left small mt-2 mb-0"><a href="./">Back to login page</a></p>
                 <!-- Register Form -->
 
                 <form class="p-5 form-horizontal" id="content"> {# actual content #}
