--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,10 +11,10 @@
 {% block content %}
     <div class="container-fluid py-3 py-md-5">
         <div class="row">
-            <div class="col-11 col-md-7 col-xl-4 center-block
+            <div class="col-11 col-md-7 col-lg-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Register Form -->
-                <p class="text-left small mt-2 mb-0"><a href="/login">Back to login page</a></p>
+                <p class="text-left small mt-2 mb-0"><a href="./">Back to login page</a></p>
                 <form class="p-5 form-horizontal" id="content"> {# actual content #}
                     <p class="text-center h4 mb-4">Register</p>
                     <hr/>
