--- a/src/templates/edit_courses.html
+++ b/src/templates/edit_courses.html
@@ -15,7 +15,7 @@
         <div class="container-fluid d-flex py-3 py-md-5 flex-grow-1">
             <div class="row px-0 px-md-5 center-block flex-row flex-grow-1">
                 <div class="col-12 col-md-4 d-flex">
-                    <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+                    <div class=" center-block container border border-dark rounded-lg shadow-lg bg-white p-3 py-lg-5 text-center">
                         <!-- Website title -->
                         <h2>Course list</h2>
                         {% if role < 2 %}
@@ -23,7 +23,7 @@
                         {% endif %}
 
                         <hr/>
-                        <div class="overflow-auto" style="height: 300px;">
+                        <div class="overflow-auto" style="height: 50vh;">
                             <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
                                 <div class="spinner-border text-info"></div>
 
@@ -41,7 +41,7 @@
                             <div class="tab-pane active m-5" id="please-select-a-course"><h1>Please select a course</h1>
                             </div>
 
-                            <div class="tab-pane" id="users-pane">
+                            <div class="tab-pane" id="new-course-pane">
                                 <form class="form-horizontal" id="new-course-content"> {# actual content #}
                                     <p class="text-center h4 mb-4">Add course</p>
                                     <hr/>
@@ -338,7 +338,7 @@
                                     <h4>Databases for this course</h4>
                                     <div class="row">
                                         <div class="col-6 col-lg-5">
-                                            <div class="overflow-auto border rounded" style="height: 300px;">
+                                            <div class="overflow-auto border rounded" style="height: 57vh;">
                                                 <div class="nav flex-column nav-pills" id="studentdatabases-nav"
                                                      role="tablist">
                                                     {#                                                    <div class="spinner-border text-info"></div>#}
@@ -354,10 +354,10 @@
                                     {% if role < 2 %}
 
                                         <hr>
-                                        <h4>Add TAs</h4>
+                                        <h4>Edit TAs / Co-Teachers</h4>
                                         <div class="row">
                                             <div class="col-6 col-lg-5">
-                                                <div class="overflow-auto border rounded" style="height: 300px;">
+                                                <div class="overflow-auto border rounded" style="height: 57vh;">
                                                     <div class="nav flex-column nav-pills" id="TA-nav"
                                                          role="tablist">
                                                         {#                                                    <div class="spinner-border text-info"></div>#}
