--- a/src/templates/edit_users.html
+++ b/src/templates/edit_users.html
@@ -22,7 +22,7 @@
             <div class="row center-block flex-row flex-grow-1">
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
                     <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white p-3 p-xl-5 text-center">
+    container border border-dark rounded-lg shadow-lg bg-white p-3 py-lg-5 text-center">
 
 
                         <div class="row d-flex flex-column">
@@ -32,7 +32,7 @@
                             </div>
                             <div class="col-12 d-flex flex-column flex-grow-1">
                                 <input class="form-control mb-3" type="text" id="search" placeholder="Search...">
-                                <div class="overflow-auto tableFixHead" style="height: 300px;">
+                                <div class="overflow-auto tableFixHead" style="height: 48vh;">
                                     <table id="user_table"
                                            class="table table-sm table-hover table-fixed table-borderless table-striped">
                                         <thead class="bg-dark text-light sticky-top">
@@ -56,7 +56,7 @@
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0 d-flex">
 
                     <div class=" center-block
-    container border border-dark rounded-lg shadow-lg bg-white p-3 py-xl-5 text-center">
+    container border border-dark rounded-lg shadow-lg bg-white p-3 py-lg-5 text-center">
                                                                                         <div id="alert-div"></div>
 
                         <div class="tab-content" id="users-tabs">
@@ -149,7 +149,7 @@
                                 <hr/>
                                 <div class="row">
                                     <div class="col-6">
-                                        <div class="overflow-auto border rounded" style="height: 300px;">
+                                        <div class="overflow-auto border rounded" style="height: 57vh;">
                                             <div class="nav flex-column nav-pills" id="courses-nav" role="tablist">
                                                 {#                                    <div class="spinner-border text-info"></div>#}
                                             </div>
