--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -13,10 +13,10 @@
 
     <div class="container-fluid py-3 py-md-5">
         <div class="row">
-            <div class="col-11 col-md-7 col-xl-4 center-block
+            <div class="col-11 col-md-7 col-lg-4 center-block
     container border border-dark rounded-lg shadow-lg bg-white">
                 <!-- Login Form -->
-                <form class="text-center p-5" action="/login" method="POST" id="login-form">
+                <form class="text-center p-5" action="login" method="POST" id="login-form">
                     {% csrf_token %}
                     <p class="h4 mb-4">Sign in</p>
                     <div class="form-group row align-items-center">
