URL Prefixes work nicely

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -21,6 +21,7 @@
     {% endblock %}
 </head>
 <body>
+<template id="url-prefix" class="/{{ url_prefix }}"></template>
 {% block content %}{% endblock %}
 </body>
 </html>
